# momo.rs

./: .gitignore  CALLBACK_TESTING.md  Cargo.toml  GEMINI.md  ddjd.md  makefile  new_version.sh  readme.md  run_integration_tests.sh
.cargo/: config.toml
.github/workflows/: deployment.yml  publish.yml
momo-callback-server/: .env.example  Cargo.toml  PORT_443_SETUP.md  README.md  test_callbacks.rs  test_manual_callbacks.sh
momo-callback-server/src/: lib.rs  main.rs
src/: callback_server.rs  lib.rs  main.rs
src/callback/: mod.rs
src/common/: http_client.rs  id.rs  mod.rs  token_manager.rs
src/enums/: access_type.rs  authorization_type.rs  callback_type.rs  currency.rs  deposit_status.rs  environment.rs  mod.rs  party_id_type.rs  payer_identification_type.rs  pre_approval_status.rs  reason.rs  request_to_pay_status.rs
src/errors/: error.rs
src/products/: account.rs  auth.rs  collection.rs  disbursements.rs  mod.rs  provisioning.rs  remittance.rs
src/requests/: access_token.rs  bc_authorize.rs  cash_transfer.rs  create_payment.rs  delivery_notification.rs  invoice.rs  invoice_delete.rs  mod.rs  pre_approval.rs  provisioning.rs  refund.rs  request_to_pay.rs  transfer.rs
src/responses/: account_info.rs  account_info_consent.rs  api_user_key.rs  bcauthorize_response.rs  cash_transfer_result.rs  invoice.rs  mod.rs  oauth2tokenresponse.rs  payment_result.rs  pre_approval.rs  refund_result.rs  request_to_pay_result.rs  token_response.rs  transfer_result.rs
src/structs/: balance.rs  mod.rs  money.rs  party.rs
src/traits/: account.rs  auth.rs  mod.rs
tests/: 0_make_payment.rs  1_invoice.rs  2_disbursement.rs  3_remittance.rs
tests/common/: mod.rs
