[package]
name = "mtnmomo"
version = "0.1.0"
edition = "2021"
authors = ["ONDONDA Prince Merveil @princefr"]
description = "A simple package to manage your momo transactions"
license = "MIT"
repository = "https://github.com/Bourse-numerique-d-afrique/momo.rs"
readme = "README.md"
#homepage = ""
#documentation = "https://docs.rs/momo"
keywords = ["momo", "mobile money", "africa", "bourse numerique d'afrique", "mtn"]
categories = ["cli", "mobile money", "africa", "bourse numerique d'afrique", "mtn"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"]}
dotenv = "0.15.0"
once_cell = "1.19.0"
reqwest = "0.11.22"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.108"
tokio = {version = "1.33.0", features = ["full"] }


[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics"]
