[package]
name = "mtnmomo"
version = "0.1.3"
edition = "2021"
authors = ["ONDONDA Prince Merveil @princefr"]
description = "MTN Momo Payment API for Rust, with support for both the Sandbox and Production environments. All products are supported: Collections, Disbursements and Remittances."
license = "MIT"
repository = "https://github.com/Bourse-numerique-d-afrique/momo.rs"
readme = "readme.md"
#homepage = ""
documentation = "https://docs.rs/mtnmomo/0.1.0/mtnmomo/"
keywords = ["momo", "money", "africa", "payment", "mtn"]
# categories = ["cli", "money", "africa", "bourse numerique d'afrique", "mtn"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"]}
dotenv = "0.15.0"
once_cell = "1.19.0"
reqwest = "0.11.22"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.108"
tokio = {version = "1.33.0", features = ["full"] }


[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics"]
