[package]
name = "mtnmomo"
version = "0.1.3"
edition = "2021"
authors = ["ONDONDA Prince Merveil @princefr"]
description = "MTN Momo Payment API for Rust, with support for both the Sandbox and Production environments. All products are supported: Collections, Disbursements and Remittances."
license = "MIT"
repository = "https://github.com/Bourse-numerique-d-afrique/momo.rs"
readme = "readme.md"
#homepage = ""
documentation = "https://docs.rs/mtnmomo/0.1.0/mtnmomo/"
keywords = ["momo", "money", "africa", "payment", "mtn"]
# categories = ["cli", "money", "africa", "bourse numerique d'afrique", "mtn"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
futures-core = "0.3.30"
once_cell = "1.19.0"
poem = { version = "3.0.4", features = [
    "rustls",
    "compression",
    "sse",
    "requestid",
] }
reqwest = "0.11.22"
rustls = "0.23.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.63"
tokio = { version = "1.33.0", features = ["full"] }
tokio-rustls = "0.26.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
webpki-roots = "0.26.5"


[dev-dependencies]
once_cell = "1.18.0"
test-case = "*"


[dependencies.uuid]
version = "1.6.1"
features = ["v4", "fast-rng", "macro-diagnostics"]
