[package]
name = "momo-callback-server"
version = "0.1.8"
edition = "2021"
authors = ["ONDONDA Prince Merveil @princefr"]
description = "Standalone HTTP callback server for MTN MoMo payment callbacks"
license = "MIT"
repository = "https://github.com/Bourse-numerique-d-afrique/momo.rs"
documentation = "https://docs.rs/momo-callback-server"
readme = "README.md"
keywords = ["momo", "callback", "server", "payments"]
categories = ["web-programming::http-server", "network-programming", "api-bindings"]

# Support both library and binary usage
[lib]
name = "momo_callback_server"
path = "src/lib.rs"

[[bin]]
name = "momo-callback-server"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core async runtime
tokio = { version = "1.33.0", features = ["full"] }

# Web framework
poem = { version = "3.0.4", features = [
    "compression",
    "sse",
    "requestid",
] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"

# Logging and tracing
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Async utilities
futures-core = "0.3.30"
futures-util = "0.3.30"
async-stream = "0.3.5"

# MTN MoMo library
mtnmomo = { path = ".." }

# Error handling
thiserror = "1.0.63"
